# BF6Portal-Tool

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  COMMANDS.md  CONCEPT_ART.md  GEMINI.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS.md  PORTAL_REFERENCE.md  PROMPT.md  README.md  RELEASE_NOTES_1.0.5-beta.md  RELEASE_NOTES_1.02-beta.md  START.bat  TODO.md  VERSION  _BATTLE_PLAN.md  _BOOK.md  _SERENITY.md  bf6portal.db  bf6portal_blocks.json  createNewBlock.prompt.md  electron-main.js  error_log.txt  fixBug.prompt.md  main.py  package-lock.json  package.json  pyproject.toml  refactorCode.prompt.md  requirements.txt  run_editor.bat  run_editor.ps1  selection-lists.md  setup_database.ps1  updateUI.prompt.md
.history/: .gitignore_20251215041556  electron-main_20251215045348.js  electron-main_20251215050510.js  package_20251215045402.json  package_20251215050328.json  package_20251215051318.json
CaptainsLog/: README.md
Dump/: Screenshot 2025-11-29 084905.html  Screenshot 2025-11-29 084942.html  Screenshot 2025-11-29 085101.html  Screenshot 2025-11-29 085108.html  Screenshot 2025-11-29 085114.html  Screenshot 2025-11-29 085248.html  Screenshot 2025-11-29 085334.html  Screenshot 2025-11-29 085503.html  Screenshot 2025-11-29 093640.html  Screenshot 2025-11-29 095915.html  Screenshot 2025-11-29 101134.html  Screenshot 2025-11-29 102744.html  Screenshot 2025-11-29 134116.html  Screenshot 2025-11-29 134122.html  Screenshot 2025-11-29 144051.html  Screenshot 2025-11-29 151533.html
_archive/: TODO.md
assets/: block_examples.json  block_help.json  subroutine_data.json
(+586 files in other folders)
